[gd_scene load_steps=11 format=3 uid="uid://xa2kt5clmxbo"]

[ext_resource type="Script" uid="uid://c767kqehm52q6" path="res://enemy.gd" id="1_paxtu"]
[ext_resource type="Texture2D" uid="uid://6kld1268qgqg" path="res://assets/10 Undead JRPG characters 1.0/RPG Maker x3 size/Pallete 1/Lich.png" id="2_paxtu"]
[ext_resource type="AudioStream" uid="uid://dy1bu6rf1iqy3" path="res://soundEffects/monster-roars-177261-[AudioTrimmer.com].mp3" id="3_paxtu"]
[ext_resource type="AudioStream" uid="uid://cpg74i8rx7mqp" path="res://soundEffects/deep-sea-monster-roar-329857.mp3" id="4_ohn0q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4gyqm"]
radius = 32.06244

[sub_resource type="Animation" id="Animation_4gyqm"]
resource_name = "Flash"
length = 0.4

[sub_resource type="Animation" id="Animation_qi2p4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_iifgy"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.7217629, 0.012791276, 0.012791276, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iifgy"]
_data = {
&"Flash": SubResource("Animation_4gyqm"),
&"RESET": SubResource("Animation_qi2p4"),
&"hit": SubResource("Animation_iifgy")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_qi2p4"]
radius = 33.0

[node name="Enemy" type="Area2D" groups=["enemy"]]
collision_layer = 3
script = ExtResource("1_paxtu")
speed = 100.0
stop_distance = 15.0
health = 500
points = 5000
knockback_pixels = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 0)
shape = SubResource("CircleShape2D_4gyqm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(9.536743e-07, -3.8146973e-06)
scale = Vector2(0.30859378, 0.29427087)
texture = ExtResource("2_paxtu")

[node name="FlashAni" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_iifgy")
}

[node name="DamageZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone"]
position = Vector2(5, 0)
shape = SubResource("CircleShape2D_qi2p4")

[node name="DamageTick" type="Timer" parent="."]

[node name="HitSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_paxtu")
volume_db = 2.701

[node name="spawnRoar" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ohn0q")
volume_db = 6.753

[connection signal="area_entered" from="DamageZone" to="." method="_on_damage_zone_area_entered"]
[connection signal="area_exited" from="DamageZone" to="." method="_on_damage_zone_area_exited"]
[connection signal="timeout" from="DamageTick" to="." method="_on_damage_tick_timeout"]
